--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
+
+@import url('https://fonts.googleapis.com/css2?family=Anek+Malayalam:wght@700&family=Bebas+Neue&family=Catamaran:wght@700&family=Clicker+Script&family=Fascinate+Inline&display=swap');
+.wallpaper {
+width: 3000px;  
+height: 300px;  
+text-align: center;  
+}
+.wall-container {
+  position: relative;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 250%;
+  padding-bottom: 70px;
+  padding-right: 70px;
+  font-family:  'Anek Malayalam', sans-serif;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
